--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.testng:testng:7.3.0'
+    testImplementation 'junit:junit:4.13'
 
 }
 
 test {
-    useTestNG()
+    useJUnit()
 }
